unpackaged/main/default/objects/Contact/fields/Academic_Career__c.field-meta.xml
<CustomField>
    <fullName>Academic_Career__c</fullName>
    <description>Academic Career from the Student&#39;s Current Opportunity</description>
    <formula>TEXT(Current_Opportunity__r.Academic_Career__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Career</label>
    <type>Text</type>
</CustomField>