unpackaged/main/default/objects/Contact/fields/Academic_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Code__c</fullName>
    <description>Academic Plan Code for the Student&#39;s Current Opportunity.</description>
    <formula>Current_Opportunity__r.Academic_Plan_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Plan Code</label>
    <type>Text</type>
</CustomField>