unpackaged/main/default/objects/Contact/fields/Academic_Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Description__c</fullName>
    <description>Academic Plan Description for the Student&#39;s Current Opportunity</description>
    <formula>Current_Opportunity__r.Academic_Plan_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Plan Description</label>
    <type>Text</type>
</CustomField>