unpackaged/main/default/objects/Contact/fields/Academic_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Academic_Program_Name__c</fullName>
    <formula>Current_Opportunity__r.traa_Academic_Program__r.Program_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Program Name</label>
    <type>Text</type>
</CustomField>