unpackaged/main/default/objects/Contact/fields/Active_OPH_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Active_OPH_Attendance__c</fullName>
    <description>Used in Pardot OPH Programs and Dynamic Lists</description>
    <formula>AND(
    OPH_Attendance_Status__c = &quot;Attended&quot;,
    Latest_Open_House_Record__r.Event_Term__c =  Current_Opportunity__r.Term__c,
    TEXT(Current_Opportunity__r.StageName) != &quot;Closed&quot;)</formula>
    <inlineHelpText>True if Student has attended an Open House in same Term as their current Opportunity</inlineHelpText>
    <label>Active OPH Attendance</label>
    <type>Checkbox</type>
</CustomField>