unpackaged/main/default/objects/Contact/fields/Additional_Campus__c.field-meta.xml
<CustomField>
    <fullName>Additional_Campus__c</fullName>
    <description>Used by Marketing Cloud. Maintained in Salesforce.</description>
    <label>Additional Campus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Padron</fullName>
            </value>
            <value>
                <fullName>Kendall</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Wolfson</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>