unpackaged/main/default/objects/Contact/fields/Adjunct_Credit__c.field-meta.xml
<CustomField>
    <fullName>Adjunct_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Adjunct Credit</label>
    <type>Checkbox</type>
</CustomField>