unpackaged/main/default/objects/Contact/fields/American_Dream_Scholar__c.field-meta.xml
<CustomField>
    <fullName>American_Dream_Scholar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by PeopleSoft integration</description>
    <label>American Dream Scholar</label>
    <type>Checkbox</type>
</CustomField>