unpackaged/main/default/objects/Contact/fields/Applied_to_Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Fast_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Applied to Fast Track</label>
    <type>Checkbox</type>
</CustomField>