unpackaged/main/default/objects/Contact/fields/Applied_to_Future_Ready__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Future_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Applied to Future Ready</label>
    <type>Checkbox</type>
</CustomField>