unpackaged/main/default/objects/Contact/fields/Applied_to_Rising_Scholars__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Rising_Scholars__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Applied to Rising Scholars</label>
    <type>Checkbox</type>
</CustomField>