unpackaged/main/default/objects/Contact/fields/Attended_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Attended_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MDC field updated by integration.</description>
    <label>Attended Orientation (AC)</label>
    <type>Checkbox</type>
</CustomField>