unpackaged/main/default/objects/Contact/fields/Attended_Orientation_BT__c.field-meta.xml
<CustomField>
    <fullName>Attended_Orientation_BT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if student has attended an orientation event. Checked by Flow</description>
    <inlineHelpText>Checked if student has attended an orientation event.</inlineHelpText>
    <label>Attended Orientation (BT)</label>
    <type>Checkbox</type>
</CustomField>