unpackaged/main/default/objects/Contact/fields/Attendee_link__c.field-meta.xml
<CustomField>
    <fullName>Attendee_link__c</fullName>
    <description>Attendee Link from Attendee Record for an Open House Event</description>
    <label>Attendee link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>