unpackaged/main/default/objects/Contact/fields/Completed_FAFSA__c.field-meta.xml
<CustomField>
    <fullName>Completed_FAFSA__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.hed__Completed_FAFSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed FAFSA</label>
    <type>Checkbox</type>
</CustomField>