unpackaged/main/default/objects/Contact/fields/Completed_FOA__c.field-meta.xml
<CustomField>
    <fullName>Completed_FOA__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.Completed_FOA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed FOA</label>
    <type>Checkbox</type>
</CustomField>