unpackaged/main/default/objects/Contact/fields/Completed_Shark_Intake__c.field-meta.xml
<CustomField>
    <fullName>Completed_Shark_Intake__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.Completed_Shark_Intake__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Shark Intake</label>
    <type>Checkbox</type>
</CustomField>