unpackaged/main/default/objects/Contact/fields/conference360__Dietary_Preference__c.field-meta.xml
<CustomField>
    <fullName>conference360__Dietary_Preference__c</fullName>
    <label>Dietary Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>No Dairy</fullName>
            </value>
            <value>
                <fullName>No Peanuts</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Diabetic</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>