unpackaged/main/default/objects/Contact/fields/conference360__Login_Suspended__c.field-meta.xml
<CustomField>
    <fullName>conference360__Login_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Event user&#39;s login was auto or manually suspended. Check this box to manually suspend a user&#39;s login.</description>
    <inlineHelpText>If the Event user&#39;s login was auto or manually suspended. Check this box to manually suspend a user&#39;s login.</inlineHelpText>
    <label>Login Suspended</label>
    <type>Checkbox</type>
</CustomField>