unpackaged/main/default/objects/Contact/fields/Connect_4_Success_Group__c.field-meta.xml
<CustomField>
    <fullName>Connect_4_Success_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Connect 4 Success Group</label>
    <type>Checkbox</type>
</CustomField>