unpackaged/main/default/objects/Contact/fields/Credits_Registered_Cohort_Term__c.field-meta.xml
<CustomField>
    <fullName>Credits_Registered_Cohort_Term__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Credits Registered Cohort Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>