unpackaged/main/default/objects/Contact/fields/Credits_Registered_Previous_Semester__c.field-meta.xml
<CustomField>
    <fullName>Credits_Registered_Previous_Semester__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Credits Registered Previous Semester</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>