unpackaged/main/default/objects/Contact/fields/Current_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated by Flow when an Opp is created. Used for cross-object formula fields to bring Onboarding Task details to Contact</description>
    <label>Current Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>