unpackaged/main/default/objects/Contact/fields/Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Term__c</fullName>
    <label>Current Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>