unpackaged/main/default/objects/Contact/fields/Eligible_for_In_State_Fees__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_In_State_Fees__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>Current_Opportunity__r.Eligible_for_In_State_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for In State Fees</label>
    <type>Checkbox</type>
</CustomField>