unpackaged/main/default/objects/Contact/fields/Employee_District__c.field-meta.xml
<CustomField>
    <fullName>Employee_District__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Employee District</label>
    <type>Checkbox</type>
</CustomField>