unpackaged/main/default/objects/Contact/fields/Employee_Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Classification__c</fullName>
    <description>Used by Marketing Cloud. This is the primary job classification.</description>
    <inlineHelpText>Used by Marketing Cloud. This is the primary job classification.</inlineHelpText>
    <label>Employee Job Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTF</fullName>
            </value>
            <value>
                <fullName>PTI</fullName>
            </value>
            <value>
                <fullName>PNC</fullName>
            </value>
            <value>
                <fullName>DFT</fullName>
            </value>
            <value>
                <fullName>PEC</fullName>
            </value>
            <value>
                <fullName>NES</fullName>
            </value>
            <value>
                <fullName>SNE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>