unpackaged/main/default/objects/Contact/fields/Employee_Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Code__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Employee Job Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>