unpackaged/main/default/objects/Contact/fields/Employee_Job_Group__c.field-meta.xml
<CustomField>
    <fullName>Employee_Job_Group__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Employee Job Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjunct</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Student-Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>