unpackaged/main/default/objects/Contact/fields/Employee_Office_Campus__c.field-meta.xml
<CustomField>
    <fullName>Employee_Office_Campus__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Employee Office Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hialeah</fullName>
            </value>
            <value>
                <fullName>Homestead</fullName>
            </value>
            <value>
                <fullName>Kendall</fullName>
            </value>
            <value>
                <fullName>Meek</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Wolfson</fullName>
            </value>
            <value>
                <fullName>Padron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>