unpackaged/main/default/objects/Contact/fields/Employee_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employee_Office_Phone__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Employee Office Phone</label>
    <type>Phone</type>
</CustomField>