unpackaged/main/default/objects/Contact/fields/Enrolled_Stage__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Stage__c</fullName>
    <description>Used by Pardot for Onboarding email templates</description>
    <formula>IF(OR (ISPICKVAL(Current_Opportunity__r.StageName, &quot;Enrolled-Not Paid&quot;),(ISPICKVAL(Current_Opportunity__r.StageName, &quot;Enrolled-Paid&quot;))),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Stage</label>
    <type>Checkbox</type>
</CustomField>