unpackaged/main/default/objects/Contact/fields/Event_Guest__c.field-meta.xml
<CustomField>
    <fullName>Event_Guest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be mapped from Blackthorn Event Form</description>
    <label>Event Guest</label>
    <type>Checkbox</type>
</CustomField>