unpackaged/main/default/objects/Contact/fields/External_App_Key__c.field-meta.xml
<CustomField>
    <fullName>External_App_Key__c</fullName>
    <description>Used by Marketing Cloud</description>
    <externalId>true</externalId>
    <label>External App Key</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>