unpackaged/main/default/objects/Contact/fields/Fast_Track_Student__c.field-meta.xml
<CustomField>
    <fullName>Fast_Track_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Fast Track Student</label>
    <type>Checkbox</type>
</CustomField>