unpackaged/main/default/objects/Contact/fields/Future_Ready_Student__c.field-meta.xml
<CustomField>
    <fullName>Future_Ready_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Marketing Cloud</description>
    <label>Future Ready Student</label>
    <type>Checkbox</type>
</CustomField>