unpackaged/main/default/objects/Contact/fields/Graduated_From__c.field-meta.xml
<CustomField>
    <fullName>Graduated_From__c</fullName>
    <description>Used by Marketing Cloud</description>
    <label>Graduated From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>HOME-SCHOOL</fullName>
            </value>
            <value>
                <fullName>HS IN MIAMI-DADE</fullName>
            </value>
            <value>
                <fullName>HS NOT IN MIAMI-DADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>