unpackaged/main/default/objects/Contact/fields/hed__Chosen_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>hed__Chosen_Full_Name__c</fullName>
    <description>The full name that this Contact prefers to use in place of their legal name.</description>
    <inlineHelpText>The full name that this Contact prefers to use in place of their legal name.</inlineHelpText>
    <label>Chosen Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>